--- a/ghattas_control_advanced/CMakeLists.txt
+++ b/ghattas_control_advanced/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   std_srvs
   message_generation
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -67,16 +68,19 @@ find_package(catkin REQUIRED COMPONENTS
  )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
+ add_action_files(
+   DIRECTORY action
+   FILES
+   grapper.action
 #   Action1.action
 #   Action2.action
-# )
+ )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
    DEPENDENCIES
    std_msgs
+   actionlib_msgs
 )
 
 ################################################
@@ -111,7 +115,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES ghattas_control_advanced
-   CATKIN_DEPENDS roscpp rospy std_msgs std_srvs
+   CATKIN_DEPENDS roscpp rospy std_msgs std_srvs actionlib_msgs
 #  DEPENDS system_lib
 )
 
