transform from ghattas_control_ advanced to ghattas_control

--- a/ghattas_control/CMakeLists.txt
+++ b/ghattas_control/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ghattas_control_advanced)
+project(ghattas_control)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -68,13 +68,12 @@ find_package(catkin REQUIRED COMPONENTS
  )
 
 ## Generate actions in the 'action' folder
- add_action_files(
-   DIRECTORY action
-   FILES
-   grapper.action
+# add_action_files(
+#   DIRECTORY action
+#   FILES
 #   Action1.action
 #   Action2.action
- )
+# )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
@@ -114,8 +113,8 @@ generate_messages(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES ghattas_control_advanced
-   CATKIN_DEPENDS roscpp rospy std_msgs std_srvs actionlib_msgs
+#  LIBRARIES ghattas_control
+   CATKIN_DEPENDS roscpp rospy std_msgs std_srvs 
 #  DEPENDS system_lib
 )
 
@@ -132,7 +131,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/ghattas_control_advanced.cpp
+#   src/${PROJECT_NAME}/ghattas_control.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -143,7 +142,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/ghattas_control_advanced_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/ghattas_control_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -200,7 +199,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_ghattas_control_advanced.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_ghattas_control.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
