--- a/ghattas_control/package.xml
+++ b/ghattas_control/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ghattas_control_advanced</name>
+  <name>ghattas_control</name>
   <version>0.0.0</version>
-  <description>The ghattas_control_advanced package</description>
+  <description>The ghattas_control package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="shehabaldeen@todo.todo">shehabaldeen</maintainer>
+  <maintainer email="shehabeldin@todo.todo">shehabeldin</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ghattas_control_advanced</url> -->
+  <!-- <url type="website">http://wiki.ros.org/ghattas_control</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -54,7 +54,6 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>message_generation</build_depend>
-  <build_depend>actionlib_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
@@ -64,7 +63,6 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>std_srvs</exec_depend>
-  <exec_depend>actionlib_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
