setting up vision dynamic reconfigure

--- a/ghattas_vision/CMakeLists.txt
+++ b/ghattas_vision/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED
   rospy
   std_msgs
   message_generation
+  dynamic_reconfigure
 )
 
 add_message_files(
@@ -17,6 +18,10 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+)
+
+generate_dynamic_reconfigure_options(
+  cfg/vision_dynamic_re.cfg
 )
 
 catkin_package(
