--- a/ghattas_confiuration/cfg/control_reconfigure.cfg
+++ b/ghattas_confiuration/cfg/control_reconfigure.cfg
@@ -15,12 +15,11 @@ gen.add("left_sway_speed",    int_t,    0, "An Integer parameter", 1100,  1100, 
 gen.add("right_sway_speed",    int_t,    0, "An Integer parameter", 1900, 1100,   1900)
 gen.add("pub_rate",    int_t,    0, "An Integer parameter", 10,  1, 100)
 
-size_enum = gen.enum([ gen.const("Small",      int_t, 0, "A small constant"),
-                       gen.const("Medium",     int_t, 1, "A medium constant"),
-                       gen.const("Large",      int_t, 2, "A large constant"),
-                       gen.const("ExtraLarge", int_t, 3, "An extra large constant")],
-                     "An enum to set size")
+size_enum = gen.enum([ gen.const("Manual",      str_t, "manual", "manual diving mode no stabilization at all"),
+                       gen.const("Depth_Hold",     str_t, "alt_hold", "depth hold mode heading and depth stabilization"),
+                       gen.const("Stabilize",      str_t, "stabilize", "only heading stabilization"),],
+                     "Drop down list to set the diving mode")
 
-gen.add("size", int_t, 0, "A size parameter which is edited via an enum", 1, 0, 3, edit_method=size_enum)
+gen.add("Diving_mode", str_t, 0, "Drop down list to set the diving mode", "manual", edit_method=size_enum)
 
 exit(gen.generate(PACKAGE, "ghattas_confiuration", "control_reconfigure"))
