added the arming state to the dynamic_reconfigure file

--- a/ghattas_confiuration/cfg/control_reconfigure.cfg
+++ b/ghattas_confiuration/cfg/control_reconfigure.cfg
@@ -22,4 +22,11 @@ size_enum = gen.enum([ gen.const("Manual",      str_t, "manual", "manual diving 
 
 gen.add("Diving_mode", str_t, 0, "Drop down list to set the diving mode", "manual", edit_method=size_enum)
 
+
+size_enum = gen.enum([ gen.const("ARMED",      str_t, "ARMED  ", "vehicle is armed"),
+                       gen.const("DISARMED",     str_t, "DISARMED", "vehicle is disarmed"),],
+                     "arming state")
+
+gen.add("arming state", str_t, 0, "arming state", "DISARMED", edit_method=size_enum)
+
 exit(gen.generate(PACKAGE, "ghattas_confiuration", "control_reconfigure"))
