editing naming conventions

--- a/ghattas_confiuration/cfg/control_reconfigure.cfg
+++ b/ghattas_confiuration/cfg/control_reconfigure.cfg
@@ -23,10 +23,10 @@ size_enum = gen.enum([ gen.const("Manual",      str_t, "manual", "manual diving 
 gen.add("Diving_mode", str_t, 0, "Drop down list to set the diving mode", "manual", edit_method=size_enum)
 
 
-size_enum = gen.enum([ gen.const("ARMED",      str_t, "ARMED  ", "vehicle is armed"),
-                       gen.const("DISARMED",     str_t, "DISARMED", "vehicle is disarmed"),],
+size_enum = gen.enum([ gen.const("armed",      str_t, "armed", "vehicle is armed"),
+                       gen.const("disarmed",     str_t, "disarmed", "vehicle is disarmed"),],
                      "arming state")
 
-gen.add("arming state", str_t, 0, "arming state", "DISARMED", edit_method=size_enum)
+gen.add("arming_state", str_t, 0, "arming state", "disarmed", edit_method=size_enum)
 
 exit(gen.generate(PACKAGE, "ghattas_confiuration", "control_reconfigure"))
