fix more build errors missing files (please don't commit if you the code won't build)

--- a/ghattas_tf/CMakeLists.txt
+++ b/ghattas_tf/CMakeLists.txt
@@ -200,9 +200,9 @@ include_directories(
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
 
-add_executable(tf_publisher src/tf_publisher.cpp)
-target_link_libraries(tf_publisher ${catkin_LIBRARIES})
-add_dependencies(tf_publisher ghattas_navigation_generate_messages_cpp)
+#add_executable(tf_publisher src/tf_publisher.cpp)
+#target_link_libraries(tf_publisher ${catkin_LIBRARIES})
+#add_dependencies(tf_publisher ghattas_navigation_generate_messages_cpp)
 
 
 #add_executable(odometry_publisher src/odometry_publisher.cpp)
